# comvisplus

./: .gitignore  README.md  build_debian.sh  export_openvino_model.sh  install.sh  install_openvino.sh  people_counter.py  requirements.txt  run_debian.sh  setup_debian.sh  web_server.py
cpp/: CMakeLists.txt  README.md
cpp/include/: app_config.hpp  camera_manager.hpp  counter_engine.hpp  http_server.hpp  openvino_backend.hpp  types.hpp
cpp/src/: app_config.cpp  camera_manager.cpp  counter_engine.cpp  http_server.cpp  main.cpp  openvino_backend.cpp
templates/: index.html  login.html
